fix: contrast

--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -1,6 +1,6 @@
 body {
     font-family: "Inter", sans-serif;
-    background: #272829 !important;
+    background: #181825 !important;
 }
 
 
@@ -188,4 +188,47 @@ h6 {
 
 .navbar {
 	padding-left: 150px;
+}
+
+.main {
+  width: 100%;
+  height: 100vh;
+  background-size: cover;
+  position: relative;
+}
+
+.main:before {
+  content: "";
+  background: rgba(24, 24, 37, 0.6);
+  position: absolute;
+  bottom: 0;
+  top: 0;
+  left: 0;
+  right: 0;
+}
+
+.main h1 {
+  margin: 0;
+  font-size: 80px;
+  font-weight: 700;
+  line-height: 56px;
+  color: #f14369;
+}
+
+.main p {
+  color: #ffffff;
+  margin: 30px 0 0 0;
+  font-size: 30px;
+  font-family: "Inter Light", sans-serif;
+}
+
+.main p span {
+  color: #f14369;
+  letter-spacing: 1px;
+}
+
+
+section {
+  padding: 60px 0;
+  overflow: hidden;
 }
